--- a/MyBlog.Blazor/Pages/_Layout.cshtml
+++ b/MyBlog.Blazor/Pages/_Layout.cshtml
@@ -11,18 +11,18 @@
     <link href="~/Css/Font.min.css" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="~/Main.css" rel="stylesheet" />
-    <component type="typeof(HeadOutlet)" render-mode="Static" />
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
     @RenderBody()
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
+           خطایی رخ داده لطفا صفحه را دوباره بارگرازی کنید.
         </environment>
         <environment include="Development">
             An unhandled exception has occurred. See browser dev tools for details.
         </environment>
-        <a href="" class="reload">Reload</a>
+        <a href="" class="reload">بارگزاری مجدد</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.server.js"></script>
