--- a/MyBlog.Blazor/Shared/NavMenu.razor
+++ b/MyBlog.Blazor/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<MudHidden Breakpoint="Breakpoint.MdAndUp" Invert="true">
-    <MudLink Href="/" Underline="Underline.None" Class="mud-button-root mud-button mud-button-text mud-button-text-inherit mud-button-text-size-medium mud-ripple mud-chip-text mud-chip-color-primary mx-1 px-3"> مقالات </MudLink>
+    <MudLink Href="/articles" Underline="Underline.None" Class="mud-button-root mud-button mud-button-text mud-button-text-inherit mud-button-text-size-medium mud-ripple mud-chip-text mud-chip-color-primary mx-1 px-3"> مقالات </MudLink>
     <MudLink Href="/" Color="Color.Inherit" Underline="Underline.None" Class="mud-button-root mud-button mud-button-text mud-button-text-inherit mud-button-text-size-medium mud-ripple mx-1 px-3"> شروع </MudLink>
     <MudLink Href="/" Color="Color.Inherit" Underline="Underline.None" Class="mud-button-root mud-button mud-button-text mud-button-text-inherit mud-button-text-size-medium mud-ripple mx-1 px-3"> اطلاعات بیشتر </MudLink>
     <MudMenu Label="محصولات" AnchorOrigin="Origin.BottomLeft" EndIcon="@Icons.Material.Filled.KeyboardArrowDown">
@@ -7,7 +7,7 @@
             <MudListItem>
                 <MudListSubheader>محصولات</MudListSubheader>
                 <MudListItem Class="w-200">
-                    <MudLink Href="/" Underline="Underline.None" Color="Color.Default">
+                    <MudLink Href="/Counter" Underline="Underline.None" Color="Color.Default">
                         <MudElement HtmlTag="span"
                                     Class="ma-0"
                                     Style="color:red;font-weight:bold;">
